BETTERY-186. add tree structure, levels amount fix, add scrollbar, add userItem referrals ,  font style fix, add user without referrals block

--- a/src/app/components/user/my-profile/my-profile.component.sass
+++ b/src/app/components/user/my-profile/my-profile.component.sass
@@ -30,7 +30,7 @@
     padding: 15px
 
 .box
-    width: 50%
+    //width: 50%
 
 .my_profile_box
     background: #FFFFFF
