--- a/src/app/components/user/my-referrals/referral/referral.component.sass
+++ b/src/app/components/user/my-referrals/referral/referral.component.sass
@@ -6,6 +6,12 @@
 
 .closed
   display: none
+
+.d_flex_alight_justify_center
+ display: flex
+ align-items: center
+ justify-content: center
+
 #list li
   list-style-type: none
   padding-top: 0
@@ -15,7 +21,7 @@
  display: flex
  align-items: center
  justify-content: space-between
- width: 506px
+ width: 94.5%
  height: 40px
  background: #FFFBE7
 
@@ -24,7 +30,7 @@
  display: flex
  align-items: center
  justify-content: space-between
- width: 90%
+ width: 91%
  flex: 1
  height: 40px
  background: #EAFFF4
@@ -33,7 +39,6 @@
     display: block
     text-align: center
     height: 19px
-    font-family: Open Sans sans-serif
     font-style: normal
     font-weight: 600
     font-size: 14px
@@ -44,7 +49,7 @@
  display: flex
  align-items: center
  justify-content: space-between
- width: 100%
+ width: 85.5%
  height: 40px
  background: #F5F5F5
 
@@ -52,7 +57,7 @@
 
 .plusMinusImageBlock
   display: flex
-  //background-image: url("/referrals/plus.jpg")
+
   background-size: contain
   background-repeat: no-repeat
   height: 20px
@@ -84,7 +89,7 @@
   position: relative
   display: flex
   justify-content: flex-end
-  width: 95%
+  width: 100%
 
 .betValueLvl1
   position: absolute
@@ -105,6 +110,7 @@
   height: 15px
   width: 15px
   margin: 0 7px
+  cursor: pointer
 
 .referral_avatar
   width: 17.7px
@@ -114,8 +120,6 @@
   border: 1px solid #FFD300
 
 .betValue
-
- font-family: Open Sans sans-serif
  font-style: normal
  font-weight: bold
  font-size: 14px
@@ -124,7 +128,6 @@
 
 .referral_join_date_block
  display: block
- font-family: Open Sans sans-serif
  font-style: normal
  font-weight: normal
  font-size: 10px
@@ -132,7 +135,6 @@
  color: #5C5C5C
 
 .referral_join_date
- font-family: Open Sans sans-serif
  text-transform: uppercase
  font-style: normal
  font-weight: bold
@@ -142,3 +144,70 @@
 #list
   position: relative
 
+.lvl3Tree div::after
+  position: absolute
+  left: 7.6%
+  bottom: 17px
+  width: 6.7%
+  content: ''
+  border-bottom: 1px dashed #DFDFDF
+
+
+.lvl2Tree::after
+  position: absolute
+  left: 3%
+  bottom: 18px
+  width: 7%
+  content: ''
+  border-bottom: 1px dashed #DFDFDF
+
+.lvl2TreeWithBtn::after
+  position: absolute
+  left: 3.3%
+  bottom: 47%
+  width: 3%
+  content: ''
+  border-bottom: 1px dashed #DFDFDF
+
+.lvl2TreeWithBtnOpen::after
+  position: absolute
+  left: 3.3%
+  bottom: 47%
+  width: 2.1%
+  content: ''
+  border-bottom: 1px dashed #DFDFDF
+
+div.test1::before
+  content: ''
+  position: absolute
+  height: 100%
+  border-left: 1px dashed #DFDFDF
+  left: 2.7%
+  bottom: 13px
+
+
+.test1 div.lvl2Itm:last-child::before
+  content: ''
+  background: #fff
+  height: 100%
+  width: 10px
+  left: 2.5%
+  top: 21px
+  position: absolute
+
+div.test2::before
+  content: ''
+  position: absolute
+  height: 100%
+  border-left: 1px dashed #DFDFDF
+  left: 7.35%
+  bottom: 13px
+
+.test2 div.lvl3Tree:last-child::before
+  content: ''
+  background: #fff
+  height: 100%
+  width: 10px
+  left: 7%
+  top: 22px
+  position: absolute
